--- a/package.json
+++ b/package.json
@@ -3,12 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pmndrs/assets": "^1.6.0",
+    "@pmndrs/branding": "^0.0.8",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/postprocessing": "^2.16.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/all": "^3.5.0",
+    "@tsparticles/basic": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@types/three": "^0.167.1",
+    "bootstrap": "^5.3.3",
+    "gsap": "^3.12.5",
+    "maath": "^0.10.8",
+    "postprocessing": "^6.36.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
+    "three": "^0.167.0",
+    "tsparticles": "^3.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
